# data-api

./: README.md  main.py  pyproject.toml
backend/: database.py  example.env  test_connection.py
sql/: customer_names.sql  customers_in_may2005.sql  movies_released2020.sql  top5_rented_movies.sql  topcategory.sql
