[project]
name = "data-api"
version = "0.1.0"
description = "This repository showcases how to use FastAPI and SQL to expose database assets via REST APIs."
authors = [
    {name = "Johana Armenta"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
